--- a/style.css
+++ b/style.css
@@ -1,122 +1,124 @@
-body {
-  font-family: Helvetica;
-  margin: 0;
+.relative {
+    position: relative;
 }
 
-h1,
-h2,
-h3 {
-  margin: 0;
+.inline {
+    display: inline-block;
 }
 
-.belt {
-  padding: 5px 10px;
-  border-radius: 10px;
-  margin-left: 5px;
-  color: #fff;
-  font-size: 15px;
-  text-transform: uppercase;
+.filter-button {
+    border: none;
 }
 
-#menu-bar {
-  background: crimson;
-  color: #fff;
-  padding: 10px;
+.margin-vertical {
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
-#menu-bar h1 {
-  font-size: 24px;
-  font-weight: normal;
-  display: inline-block;
+#advanced {
+    opacity: .7;
+    font-size: 11px;
+    margin-left: 70px;
+    top: 5px;
+    position: relative;
 }
 
-#menu-bar ul {
-  float: right;
-  list-style-type: none;
-  padding: 0;
-  margin: 6px 0;
+.advanced-button {
+    border-bottom: 1px dotted rgba(255, 255, 255, 0.6);
 }
 
-#menu-bar li {
-  float: right;
-  margin-left: 20px;
+.left-inner-addon i {
+    position: absolute;
+    padding: 6px 12px;
+    pointer-events: none;
 }
 
-#menu-bar a {
-  color: #fff;
+.dropdown-search {
+    background: inherit;
+    margin-top: 2px;
+    z-index: 999;
+    top: 100%;
+    min-width: 202px;
+    border-bottom: none;
+    padding: 4px 5px;
 }
 
-main {
-  background: #eee;
-  width: 80%;
-  margin: 30px auto;
-  border-radius: 10px;
+.left-inner-addon input {
+    padding-left: 30px;
 }
 
-.content {
-  padding: 20px;
+.form-group {
+    margin-bottom: 0px;
 }
 
-.content button,
-.content input[type="submit"] {
-  background: #fff;
-  padding: 10px;
-  border-radius: 10px;
-  cursor: pointer;
-  color: #777;
-  border: 0;
-  box-shadow: 2px 2px 2px rgba(20, 20, 20, 0.1);
-  font-size: 16px;
+.first-did a {
+    margin-top: 5px;
+    background-color: black;
+    color: white!important;
+    margin-bottom: -5px;
 }
 
-.content button:nth-child(2) {
-  float: right;
+.first-did a:hover {
+    background-color: black!important;
+    color: white!important;
 }
 
-.content ul {
-  padding: 0;
-  list-style-type: none;
-  margin: 30px 0;
+.searchable {
+    border-top-width: 0;
+    padding: 0;
+    overflow: auto;
+    width: 202px;
+    max-height: 186px;
+    margin-top: -9px;
+    border-radius: 0 0 3px 3px;
+    margin-left: 0px;
 }
 
-.content li {
-  padding: 15px 0;
-  border-top: 1px solid #e2e2e2;
-  color: #444;
+.search-control {
+    margin-left: -5px;
+    width: 202px;
 }
 
-.content li span {
-  float: right;
+.advanced-button {
+    cursor: pointer;
 }
 
-.content li h3 {
-  display: inline-block;
-  font-weight: normal;
-  font-size: 22px;
+#advanced-options input {
+    margin-left: 65px;
 }
 
-.content input {
-  width: 90%;
-  padding: 10px 5%;
-  border-radius: 10px;
-  border: 2px solid #ddd;
-  margin: 10px 0;
+#advanced-close-button {
+    margin-left: 200px;
+    cursor: pointer;
 }
 
-.content input[type="submit"]:last-child {
-  width: 150px;
-  display: block;
-  margin: 15px auto;
+.btn {
+    background: 0 0;
+    box-shadow: none;
+    border: 1px solid #0082d5;
+    border-radius: 3px;
+    font-family: Roboto-Medium, Roboto, sans-serif;
+    font-size: 13px;
 }
 
-.remove {
-  float: right;
-  padding: 5px;
-  background: #fff;
-  width: 18px;
-  text-align: center;
-  border-radius: 20px;
-  color: crimson;
-  cursor: pointer;
-  margin-left: 10px;
+.btn.btn-success {
+    border-color: #04be5b;
+    color: #04be5b;
+}
+
+.btn.btn.btn-success:hover {
+    color: whitesmoke;
+}
+
+.btn.btn-primary {
+    color: #0082d5;
+    border: 1px solid #0082d5;
+}
+
+#submit-section {
+    margin-top: 14px;
+    margin-left: 30px;
+}
+#select-collection {
+    margin-left: 65px;
 }
